# lor_plus_bot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: create_bot.py  main.py
app/database/: db_create.py  handlers.py  models.py
app/filters/: filters.py
app/handlers/: admin_commands.py  common_commands.py  fsm.py  user_commands.py
app/keyboards/: keyboards.py
app/utils/: async_functions.py  utils.py
data/text_docs/: info.txt  отзыв.txt
data/yaml_configs/: day_config.yaml  day_names.yaml  doctors.yaml  m_final.yaml  m_final_short.yaml  messeges.yaml  week_config.yaml
